fix(content): fix desk 'views' overflow
Content Views list were appearing wrong with big number of views

SD-824

--- a/app/scripts/superdesk-items-common/styles/media-archive.less
+++ b/app/scripts/superdesk-items-common/styles/media-archive.less
@@ -1800,3 +1800,45 @@ figure.media {
 		max-width: 100%;
 	}
 }
+
+
+/* desk views/saved searches */
+.desk-views {
+	position: absolute;
+	top:0; right: 0; left: 0;
+	margin: 0 -1px;
+	border: 1px solid #e0e0e0;
+	border-top: 0;
+	padding: 0;
+	.box-sizing(content-box);
+	background: #f5f5f5;
+	height: 49px;
+	overflow: hidden;
+	padding: 13px 10px !important;
+	&:hover {
+		background: #f5f5f5 !important;
+	}
+	&.autoheight {
+		height: auto;
+		overflow: auto;
+	}
+	.chevron {
+		position: absolute;
+		width: 14px;
+		height: 14px;
+		padding: 0 7px;
+		background: #eaeaea;
+		bottom: 0;
+		left: 50%;
+		margin-left: -14px;
+		.transition(all ease 0.2s);
+		i {
+			display: block;
+		}
+		&:hover {
+			cursor: pointer;
+			background: #e0e0e0;
+			padding: 2px 7px;
+		}
+	}
+}
